--- a/app/client/style.css
+++ b/app/client/style.css
@@ -40,3 +40,13 @@ body {
 .user-profile-measures-container {
     padding: 0.5rem;
 }
+
+/** MeasuresGrid */
+.measures-grid-cards-padding {
+    padding: 0.25rem;
+}
+
+.measures-grid-card-button {
+    width: 4rem;
+    height: 1.5rem;
+}
