--- a/app/client/style.css
+++ b/app/client/style.css
@@ -26,3 +26,13 @@ body {
   padding-top: 10px;
   padding-bottom: 20px;
 }
+
+.card-title {
+  text-align: center;
+  margin-top: 100px;
+}
+
+.card-homepage {
+  background-color: blue;
+}
+
