(#4) Removed css related to homepage cards. Changed the color with blue, red, green, yellow

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -29,10 +29,9 @@ body {
 
 .card-title {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 200px;
 }
 
-.card-homepage {
-  background-color: blue;
+.card-container {
+  margin-top: 80px;
 }
-
