--- a/app/client/style.css
+++ b/app/client/style.css
@@ -26,3 +26,11 @@ body {
   padding-top: 10px;
   padding-bottom: 20px;
 }
+
+.testimony-body {
+  /*margin: 0 auto; !* Added *!*/
+  /*float: none; !* Added *!*/
+  /*width: '1rem';*/
+  height: 100px;
+}
+
