issue #52 Added secretary dashboard
-only accessible through admin (for now)
- added list of hearings tracked
- added list of testimonies
   -buttons to approve and view
- added list of bills tracked
- added calendar

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -13,6 +13,7 @@ body {
   --bs-body-bg: #f9f9f9;
 }
 
+
 .navbar-toggler .navbar-toggler-icon{
   background-image: var(--bs-navbar-toggler-icon-bg) !important;
 }
@@ -26,6 +27,15 @@ body {
   z-index: 9999;
 }
 
+/* Define custom calendar style */
+
+.react-calendar {
+  border: 0px !important;
+}
+
+.react-calendar__tile--now{
+  background-color: #39c0ed !important;
+}
 
 /* Set the SignIn and SignUp alerts background. */
 .signin {
