--- a/app/client/style.css
+++ b/app/client/style.css
@@ -145,3 +145,17 @@ body {
   top: 30px;
   width: 300px;
 }
+
+.individual-bill-header {
+  padding-top: 20px;
+}
+
+.individual-bill {
+  font-size: 16px;
+  padding: 15px;
+
+}
+
+.row-tester {
+}
+
